# rabbitmq-c_vendor

./: CMakeLists.txt  README.md  package.xml  rabbitmq-c_vendor-extras.cmake.in
